# yaml-provenance

./: .bumpversion.cfg  .gitignore  CITATION.cff  CONTEXT.md  CONTRIBUTING.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: api.rst  conf.py  configuration.rst  index.rst  quickstart.rst
examples/: basic_usage.py  lightweight_mode.py
src/yaml_provenance/: __init__.py  _config.py  _decorator.py  _dict.py  _exceptions.py  _helpers.py  _list.py  _provenance.py  _serialization.py  _wrapper.py  _yaml_dumper.py  tracker.py  tracking_helpers.py  yaml_loader.py
tests/: conftest.py  test_clean_provenance.py  test_config.py  test_decorator.py  test_dict.py  test_helpers.py  test_lightweight.py  test_list.py  test_new_helpers.py  test_provenance.py  test_serialization.py  test_wrapper.py  test_yaml_dumper.py  test_yaml_loader.py
tests/fixtures/: dependencies.yaml  example.yaml
